test/corpus/custom_tag.txt
===
custom tag
===

/**
 * @foo.custom My stuff
 */

---

(document
  (custom_tag
    (tag_name)
    (description)))

===
custom tag: markdown
===

/// @foo.custom My stuff

---

(document
  (custom_tag
    (tag_name)
    (description)))

===
custom tag: inline
===

/**
 * {@foo.custom My stuff}
 */

---

(document
  (description
    (custom_inline_tag
      (tag_name)
      (description))))

===
custom tag: markdown inline
===

/// {@foo.custom My stuff}

---

(document
  (markdown_description
    (custom_inline_tag
      (tag_name)
      (description))))

===
custom tag: missing description
===

/**
 * @foo.custom
 */

---

(document
  (custom_tag
    (tag_name)))

===
custom tag: markdown missing description
===

/// @foo.custom

---

(document
  (custom_tag
    (tag_name)))

===
custom tag: inline, missing description
===

/**
 * {@foo.custom}
 */

---

(document
  (description
    (custom_inline_tag
      (tag_name))))

===
custom tag: markdown inline, missing description
===

/// {@foo.custom}

---

(document
  (markdown_description
    (custom_inline_tag
      (tag_name))))
