test/corpus/deprecated_tag.txt
===
deprecated tag
===

/**
 * @deprecated test
 */

---

(document
  (deprecated_tag
    (tag_name)
    (description)))

===
deprecated tag: markdown
===

/// @deprecated test

---

(document
  (deprecated_tag
    (tag_name)
    (description)))

===
deprecated tag: no description
===

/**
 * @deprecated
 */

---

(document
  (deprecated_tag
    (tag_name)))

===
deprecated tag: markdown no description
===

/// @deprecated

---

(document
  (deprecated_tag
    (tag_name)))
