test/corpus/document.txt
===
document: single-line
===

/// test

---

(document
  (markdown_description))

===
document: multi-line markdown
===

/// test
/// this

---

(document
  (markdown_description))

===
document: multi-line
===

/**
 * test
 */

---

(document
  (description))

===
document: multi-line in disguise
===

/** test */

---

(document
  (description))

===
document: two lines
===

/**
 * test
 * this
 */

---

(document
  (description))

===
document: multi-line in disguise w/ block tag
===

/** test
 * @deprecated problem */

---

(document
  (description)
  (deprecated_tag
    (tag_name)
    (description)))

===
document: multi-line markdown w/ block tag
===

/// test
/// @deprecated problem

---

(document
  (markdown_description)
  (deprecated_tag
    (tag_name)
    (description)))

===
document: multi-line markdown w/ blank line and block tag
===

/// test
///
/// @deprecated problem

---

(document
  (markdown_description)
  (deprecated_tag
    (tag_name)
    (description)))

===
document: multi-line w/ two block tags
===

/**
 * test
 * @throws foo.Type test
 * @deprecated problem
 */

---

(document
  (description)
  (throws_tag
    (tag_name)
      (type
        (identifier)
        (identifier))
      (description))
  (deprecated_tag
    (tag_name)
    (description)))

===
document: multi-line markdown w/ two block tags
===

/// test
/// @throws foo.Type test
/// @deprecated problem

---

(document
  (markdown_description)
  (throws_tag
    (tag_name)
      (type
        (identifier)
        (identifier))
      (description))
  (deprecated_tag
    (tag_name)
    (description)))
