test/corpus/inherit_doc_tag.txt
===
inheritDoc tag
===

/**
 * {@inheritDoc}
 */

---

(document
  (description
    (inherit_doc_tag
      (tag_name))))

===
inheritDoc tag: markdown
===

/// {@inheritDoc}

---

(document
  (markdown_description
    (inherit_doc_tag
      (tag_name))))

===
inheritDoc tag: supertype
===

/**
 * {@inheritDoc Type}
 */

---

(document
  (description
    (inherit_doc_tag
      (tag_name)
      (type
        (identifier)))))

===
inheritDoc tag: markdown supertype
===

/// {@inheritDoc Type}

---

(document
  (markdown_description
    (inherit_doc_tag
      (tag_name)
      (type
        (identifier)))))

===
inheritDoc tag: qualified supertype
===

/**
 * {@inheritDoc foo.Type}
 */

---

(document
  (description
    (inherit_doc_tag
      (tag_name)
      (type
        (identifier)
        (identifier)))))

===
inheritDoc tag: markdown qualified supertype
===

/// {@inheritDoc foo.Type}

---

(document
  (markdown_description
    (inherit_doc_tag
      (tag_name)
      (type
        (identifier)
        (identifier)))))
