test/corpus/link_tag_member.txt
===
link tag: member + label
===

/**
 * {@link #member label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier)))
      (description))))

===
link tag: markdown member + label
===

/// {@link #member label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier)))
      (description))))

===
link tag: member
===

/**
 * {@link #member}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier))))))

===
link tag: markdown member
===

/// {@link #member}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier))))))

===
link tag: member + label: without hash
===

/**
 * {@link member label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier)))
      (description))))

===
link tag: markdown member + label: without hash
===

/// {@link member label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier)))
      (description))))

===
link tag: member: without hash
===

/**
 * {@link member}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier))))))

===
link tag: markdown member: without hash
===

/// {@link member}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier))))))
