test/corpus/literal_tag.txt
===
literal tag
===

/**
 * {@literal test}
 */

---

(document
  (description
    (literal_tag
      (tag_name)
      (literal))))

===
literal tag: markdown
===

/// {@literal test}

---

(document
  (markdown_description
    (literal_tag
      (tag_name)
      (literal))))

===
literal tag: without any literal
===

/**
 * {@literal}
 */

---

(document
  (description
    (literal_tag
      (tag_name))))

===
literal tag: markdown without any literal
===

/// {@literal}

---

(document
  (markdown_description
    (literal_tag
      (tag_name))))
