test/corpus/provides_tag.txt
===
provides tag
===

/**
 * @provides Service test
 */

---

(document
  (provides_tag
    (tag_name)
    (type
      (identifier))
    (description)))

===
provides tag: markdown
===

/// @provides Service test

---

(document
  (provides_tag
    (tag_name)
    (type
      (identifier))
    (description)))

===
provides tag: missing description
===

/**
 * @provides Service
 */

---

(document
  (provides_tag
    (tag_name)
    (type
      (identifier))))

===
provides tag: markdown missing description
===

/// @provides Service

---

(document
  (provides_tag
    (tag_name)
    (type
      (identifier))))
