test/corpus/return_tag.txt
===
return tag
===

/**
 * @return My retval
 */

---

(document
  (return_tag
    (tag_name)
    (description)))

===
return tag: markdown
===

/// @return My retval

---

(document
  (return_tag
    (tag_name)
    (description)))

===
return tag: inline
===

/**
 * {@return My retval}
 */

---

(document
  (description
    (return_tag
      (tag_name)
      (description))))

===
return tag: markdown inline
===

/// {@return My retval}

---

(document
  (markdown_description
    (return_tag
      (tag_name)
      (description))))

===
return tag: missing description
===

/**
 * @return
 */

---

(document
  (return_tag
    (tag_name)))

===
return tag: markdown missing description
===

/// @return

---

(document
  (return_tag
    (tag_name)))

===
return tag: inline, missing description
===

/**
 * {@return}
 */

---

(document
  (description
    (return_tag
      (tag_name))))

===
return tag: markdown inline, missing description
===

/// {@return}

---

(document
  (markdown_description
    (return_tag
      (tag_name))))

===
return tag: inheritdoc
===

/**
 * @return {@inheritDoc}
 */

---

(document
  (return_tag
    (tag_name)
    (description
      (inherit_doc_tag
        (tag_name)))))

===
return tag: markdown inheritdoc
===

/// @return {@inheritDoc}

---

(document
  (return_tag
    (tag_name)
    (description
      (inherit_doc_tag
        (tag_name)))))
